--- a/src/components/new-task-form/new-task-form.css
+++ b/src/components/new-task-form/new-task-form.css
@@ -38,3 +38,15 @@
     width: 15%;
     padding-left: 16px;
 }
+
+input[type='number'],
+input[type='number']:hover,
+input[type='number']:focus {
+    appearance: none;
+    -moz-appearance: textfield;
+}
+
+input[type='number']::-webkit-outer-spin-button,
+input[type='number']::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
